@@ -14,6 +14,7 @@ import { getCurrency, formatCurrencyName } from 'utils/currency';
 import {
 	formatAccountFeesDescription,
 	getCurrentFee,
+	getTransactionsPaymentMethodName,
 } from 'utils/account-fees';
 
 const LearnMoreLink = ( { accountFees } ) => {
@@ -34,24 +35,51 @@ const LearnMoreLink = ( { accountFees } ) => {
 	);
 };
 
-const AccountFees = ( props ) => {
-	const { accountFees } = props;
-	const baseFee = accountFees.base;
-
+const AccountFee = ( props ) => {
+	const { accountFee, paymentMethod } = props;
+	const baseFee = accountFee.base;
 	const currency = getCurrency( baseFee.currency );
 	const currencyName = formatCurrencyName( baseFee.currency );
 	const currencyCode = currency?.getCurrencyConfig()?.code;
-	const feeDescription = formatAccountFeesDescription( accountFees );
-	const currentFee = getCurrentFee( accountFees );
+	const feeDescription = formatAccountFeesDescription( accountFee );
+	const currentFee = getCurrentFee( accountFee );
 
 	return (
 		<>
+			<p>{ getTransactionsPaymentMethodName( paymentMethod ) }:</p>
 			{ currencyName ? `${ currencyName } ` : null }
 			{ currencyCode ? `(${ currencyCode }) ` : null }
 			{ feeDescription }
 			<ExpirationBar feeData={ currentFee } />
 			<ExpirationDescription feeData={ currentFee } />
-			<LearnMoreLink accountFees={ accountFees } />
+			<LearnMoreLink accountFees={ accountFee } />
+		</>
+	);
+};
+
+const AccountFees = ( props ) => {
+	const { accountFees } = props;
+
+	return (
+		<>
+			{ Object.entries( accountFees ).map( ( [ key, value ] ) => {
+				//ignore base and discount fields - still used for backwards compatibilityss
+				if (
+					'base' === key ||
+					'discount' === key ||
+					0 === value.discount.length
+				) {
+					return null;
+				}
+
+				return (
+					<AccountFee
+						key={ key }
+						paymentMethod={ key }
+						accountFee={ value }
+					/>
+				);
+			} ) }
 		</>
 	);
 };
