@@ -25,7 +25,33 @@ describe( 'AccountFees', () => {
 				fixed_rate: 30,
 				currency: 'usd',
 			},
-			discount: [],
+			discount: [
+				{
+					end_time: null,
+					volume_allowance: null,
+					volume_currency: null,
+					current_volume: null,
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+				},
+			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.029,
+						fixed_rate: 30,
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -37,7 +63,33 @@ describe( 'AccountFees', () => {
 				fixed_rate: 25,
 				currency: 'eur',
 			},
-			discount: [],
+			discount: [
+				{
+					end_time: null,
+					volume_allowance: null,
+					volume_currency: null,
+					current_volume: null,
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+				},
+			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 25,
+					currency: 'eur',
+				},
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.029,
+						fixed_rate: 30,
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -58,6 +110,22 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						percentage_rate: 0.02,
+						fixed_rate: 20,
+						volume_allowance: 100000000,
+						current_volume: 1234556,
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -78,6 +146,22 @@ describe( 'AccountFees', () => {
 					volume_currency: 'gbp',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.014,
+					fixed_rate: 20,
+					currency: 'gbp',
+				},
+				discount: [
+					{
+						percentage_rate: 0.007,
+						fixed_rate: 10,
+						volume_allowance: 100000000,
+						current_volume: 1234556,
+						volume_currency: 'gbp',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -98,6 +182,22 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.014,
+					fixed_rate: 20,
+					currency: 'gbp',
+				},
+				discount: [
+					{
+						percentage_rate: 0.007,
+						fixed_rate: 10,
+						volume_allowance: 100000000,
+						current_volume: 1234556,
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -115,6 +215,19 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						discount: 0.3,
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -134,6 +247,21 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						discount: 0.3,
+						volume_allowance: 2500000,
+						current_volume: 1234556,
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -152,6 +280,20 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						discount: 0.3,
+						end_time: '2025-03-31 12:00:00',
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -172,6 +314,22 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						discount: 0.3,
+						volume_allowance: 2500000,
+						current_volume: 1234556,
+						end_time: '2025-03-31 12:00:00',
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
 		expect( accountFees ).toMatchSnapshot();
 	} );
@@ -196,7 +354,120 @@ describe( 'AccountFees', () => {
 					volume_currency: 'usd',
 				},
 			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						discount: 0.2,
+						volume_currency: 'usd',
+					},
+					{
+						discount: 0.3,
+						volume_allowance: 2500000,
+						current_volume: 1234556,
+						volume_currency: 'usd',
+					},
+				],
+			},
 		} );
+		expect( accountFees ).toMatchSnapshot();
+	} );
+
+	test( 'renders without any discounts', () => {
+		const { container: accountFees } = renderAccountFees( {
+			base: {
+				percentage_rate: 0.029,
+				fixed_rate: 30,
+				currency: 'usd',
+			},
+			discount: [],
+		} );
+
+		expect( accountFees ).toMatchSnapshot();
+	} );
+
+	test( 'renders discounts multiple payment methods', () => {
+		const { container: accountFees } = renderAccountFees( {
+			base: {
+				percentage_rate: 0.029,
+				fixed_rate: 30,
+				currency: 'usd',
+			},
+			discount: [
+				{
+					end_time: null,
+					volume_allowance: null,
+					volume_currency: null,
+					current_volume: null,
+					percentage_rate: 0.014,
+					fixed_rate: 25,
+				},
+			],
+			card: {
+				base: {
+					percentage_rate: 0.029,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.014,
+						fixed_rate: 25,
+					},
+				],
+			},
+			card_present: {
+				base: {
+					percentage_rate: 0.027,
+					fixed_rate: 5,
+					currency: 'usd',
+				},
+				discount: [],
+			},
+			giropay: {
+				base: {
+					percentage_rate: 0.014,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.014,
+						fixed_rate: 25,
+					},
+				],
+			},
+			sofort: {
+				base: {
+					percentage_rate: 0.014,
+					fixed_rate: 30,
+					currency: 'usd',
+				},
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.014,
+						fixed_rate: 25,
+					},
+				],
+			},
+		} );
+
 		expect( accountFees ).toMatchSnapshot();
 	} );
 } );
