@@ -74,6 +74,20 @@ const AccountStatusDetails = ( props ) => {
 		</>
 	);
 
+	const discounts = Object.entries( accountFees )
+		.map( ( [ key, value ] ) => {
+			//ignore base and discount fields - still used for backwards compatibilityss
+			if (
+				'base' === key ||
+				'discount' === key ||
+				0 === value.discount.length
+			)
+				return null;
+
+			return value.discount;
+		} )
+		.filter( ( e ) => e && e.length );
+
 	return (
 		<AccountStatusCard title={ cardTitle }>
 			<AccountStatusItem
@@ -90,12 +104,10 @@ const AccountStatusDetails = ( props ) => {
 					depositsStatus={ accountStatus.depositsStatus }
 				/>
 			</AccountStatusItem>
-			<AccountStatusItem
-				align={ 'flex-start' }
-				label={ __( 'Base fee:', 'woocommerce-payments' ) }
-			>
-				<AccountFees accountFees={ accountFees } />
-			</AccountStatusItem>
+			{ discounts.length && (
+				<h4>{ __( 'Active discounts', 'woocommerce-payments' ) }</h4>
+			) }
+			<AccountFees accountFees={ accountFees } />
 		</AccountStatusCard>
 	);
 };
