@@ -36,7 +36,33 @@ describe( 'AccountStatus', () => {
 					percentage_rate: 0.029,
 					fixed_rate: 0.3,
 				},
-				discount: [],
+				discount: [
+					{
+						end_time: null,
+						volume_allowance: null,
+						volume_currency: null,
+						current_volume: null,
+						percentage_rate: 0.029,
+						fixed_rate: 30,
+					},
+				],
+				card: {
+					base: {
+						currency: 'EUR',
+						percentage_rate: 0.029,
+						fixed_rate: 0.3,
+					},
+					discount: [
+						{
+							end_time: null,
+							volume_allowance: null,
+							volume_currency: null,
+							current_volume: null,
+							percentage_rate: 0.029,
+							fixed_rate: 30,
+						},
+					],
+				},
 			}
 		);
 		expect( accountStatus ).toMatchSnapshot();
