@@ -12,6 +12,7 @@
 * Fix - Applied sentence case on all strings.
 * Fix - Missing customer information after guest checkout via Checkout Block.
 * Fix - Show correct payment method name during checkout using upe methods.
+* Update - display fees per payment method on overview page.
 
 = 3.1.0 - 2021-10-06 =
 * Fix - Issue affecting analytics for Multi-Currency orders made with a zero-decimal to non-zero decimal conversion.
